--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,7 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+  <script defer src="https://pro.fontawesome.com/releases/v5.5.0/js/solid.js" integrity="sha384-VxezC2Q+YoC+yUILib+HlmOsFiqNzYtQIXsHYY6ST7QZVfgBNs2giKE97ijGMgUH" crossorigin="anonymous"></script>
+  <script defer src="https://pro.fontawesome.com/releases/v5.5.0/js/brands.js" integrity="sha384-oMyy7aPCmlH4ZGEaKHW+zAoaKDWIFh6iqJ53lusMpn+Kp8SN5nJ2kzkP1qd0+icb" crossorigin="anonymous"></script>
+  <script defer src="https://pro.fontawesome.com/releases/v5.5.0/js/fontawesome.js" integrity="sha384-oPma1F1txBbqTG+1O7BEx0A/qFtD+R661ULJLmI9RDQ0PfbRP1tQU3vBIBbJIAxL" crossorigin="anonymous"></script>
 </head>
