--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -4,7 +4,7 @@
 <div class="post-comments">
   <div id="disqus_thread"></div>
   <script type="text/javascript">
-      var disqus_shortname = '{{ site.disqus_shortname }}'; // required: replace example with your forum shortname
+      var disqus_shortname = '{{ site.disqus_shortname }}';
       (function() {
           var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
           dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
@@ -26,7 +26,7 @@
       	ds.type = 'text/javascript';ds.async = true;
       	ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
       	ds.charset = 'UTF-8';
-      	(document.getElementsByTagName('head')[0] 
+      	(document.getElementsByTagName('head')[0]
       	 || document.getElementsByTagName('body')[0]).appendChild(ds);
       })();
       </script>
