--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -37,7 +37,7 @@ pre, pre code {
 	background-color: #223;
 }
 pre code {
-	padding: 0;	
+	padding: 0;
 }
 .hide {
     display: none;
@@ -56,14 +56,14 @@ table {
 		padding: 5px 15px;
 		margin: 0;
 	}
-	
+
 	th {
 		border-color: #555;
 		background: #555;
 		color: #eee;
 		font-weight:normal;
 	}
-	
+
 	tr:hover {
 		background: rgba(255,255,0,0.2);
 	}
@@ -75,4 +75,9 @@ h1,h2,h3,h4,h5,h6{
 
 .MathJax_SVG_Display, .MathJax_Display, .MJXc-display, .MathJax_PHTML_Display {
     overflow-x: auto;
+}
+
+.hygl {
+	font-family: "hygl";
+	font-size: 2.2em;
 }
