--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,12 @@
 ---
 @charset "utf-8";
 
-$base-font-family: "Open Sans", "Helvetica Neue", "DejaVu Sans", Arial, "PingFang SC", "Noto Sans CJK SC", "Hiragino Sans GB", "微软雅黑",  Helvetica, sans-serif;
+@font-face {
+    font-family: "hygl";
+    src: url("../fonts/Xingkai_hygl.ttf") format("truetype");
+}
+
+$base-font-family: hygl, "-apple-system", "BlinkMacSystemFont", "Open Sans", "Helvetica Neue", "DejaVu Sans", Arial, Helvetica, sans-serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
@@ -30,8 +35,6 @@ $header-fg: #FFF;
         @content;
     }
 }
-
-
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
