--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -2,7 +2,7 @@
 .page-heading {
 	font-size:40px;
 	font-weight: normal;
-	margin: 20px;
+	margin: 0;
     @include media-query($on-palm) {
 		margin: 10px;
 		font-size: 34px;
@@ -16,7 +16,7 @@
     background: #fff;
     font-size: 0.7 * $base-font-size;
     padding: 1px 8px;
-    
+
     &:hover, &:focus {
         color: #666;
     }
