--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -2,7 +2,7 @@
     .post-header {
     	margin: 0 100px;
     	margin-bottom: 40px;
-    	padding: 20px;
+    	padding: 0;
         .post-title {
         	font-size:40px;
         	font-weight: normal;
@@ -24,27 +24,27 @@
     }
     .post-content {
         color: #333;
-        
+
         h1,h2,h3,h4,h5,h6 {
             color: #000;
         }
-        
+
         h1, h2 {
         	margin-bottom: 10px;
             margin-top: 30px;
         }
-        
+
         h1, h2, h3 {
             border-bottom: 1px solid #CCC;
         }
-        
+
         pre {
         	margin: 0 -30px;
             @include media-query($on-palm) {
 		        margin: 0 -10px;
             }
         }
-        
+
         .middle-image {
             display: block;
             margin-left: auto;
