Dropdown h-scrollable menus

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,7 @@
+---
+common-js:
+  - "/js/nav.js"
+---
 <!DOCTYPE html>
 <html>
 
@@ -19,6 +23,8 @@
     </div>
 
     {% include footer.html %}
+
+    {% include foot.html %}
 
   </body>
 
