--- a/css/main.scss
+++ b/css/main.scss
@@ -28,6 +28,7 @@ $color-link-hover: #069;
 $header-bg: #607D8B;
 $header-bg-hover: #78909C;
 $header-link: #CFD8DC;
+$header-link-hover: #FFFFFF;
 $header-fg: #FFF;
 
 @mixin media-query($device) {
