--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,4 +22,7 @@
   <script defer src="https://pro.fontawesome.com/releases/v5.5.0/js/solid.js" integrity="sha384-VxezC2Q+YoC+yUILib+HlmOsFiqNzYtQIXsHYY6ST7QZVfgBNs2giKE97ijGMgUH" crossorigin="anonymous"></script>
   <script defer src="https://pro.fontawesome.com/releases/v5.5.0/js/brands.js" integrity="sha384-oMyy7aPCmlH4ZGEaKHW+zAoaKDWIFh6iqJ53lusMpn+Kp8SN5nJ2kzkP1qd0+icb" crossorigin="anonymous"></script>
   <script defer src="https://pro.fontawesome.com/releases/v5.5.0/js/fontawesome.js" integrity="sha384-oPma1F1txBbqTG+1O7BEx0A/qFtD+R661ULJLmI9RDQ0PfbRP1tQU3vBIBbJIAxL" crossorigin="anonymous"></script>
+
+  <!-- jquery -->
+  <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" crossorigin="anonymous"></script>
 </head>
