--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,11 +3,27 @@
   <div class="wrapper">
     <div id="sidebar-toggle">TOC</div>
     <a class="site-title" href="{{ site.baseurl }}/"><i class="fas fa-home fa-lg fa-fw"></i></a>
-    <nav class="site-nav">
-      {% for link in site.header.links %}{% assign url = link[1] %}
-        {% assign urlchk = url | split: "/" %}{% if urlchk[0] == '' and urlchk[1] != '' %}{% assign uprefix = site.baseurl %}{% else %}{% assign uprefix = ''%}{% endif %}
-        <a class="page-link" href="{{ url | prepend: uprefix }}">{{ link[0] }}</a>
-      {% endfor %}
-    </nav>
+    <div class="nav-scroll">
+      <nav id="main-navbar" class="site-nav">
+        {% for link in site.navbar-links %}
+          <div class="navlinks-container">
+            {% if link[1].first %}
+              <a class="navlinks-parent" href="javascript:void(0)">{{ link[0] }}</a>
+              <div class="navlinks-children">
+                {% for childlink in link[1] %}
+                  {% for linkparts in childlink %}
+                    <div class="navlink-child">
+                      {% include navbarlink.html link=linkparts %}
+                    </div>
+                  {% endfor %}
+                {% endfor %}
+              </div>
+            {% else %}
+              {% include navbarlink.html class="navlinks-parent" link=link %}
+            {% endif %}
+          </div>
+        {% endfor %}
+      </nav>
+    </div>
   </div>
 </header>
