--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,5 @@
 <div class="col-box col-box-author">
-  <img class="avatar" src="{{ site.avatar }}" alt="{{ site.author }}">
+  <img class="avatar" src="{{ site.avatar.1x }}" alt="{{ site.author }}" srcset="{{ site.avatar.1x }} 1x, {{ site.avatar.2x }} 2x">
   <div class="col-box-title name">{{ site.author }}</div>
   <p>{{ site.tagline }}</p>
   <p class="contact">
