Fix top-level menu items to not have vertical scroll

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -64,6 +64,7 @@ body {
     }
 
     a.navlinks-parent {
+      padding: 4px 20px;
       &:hover, &:focus, &:active {
         background: $header-bg-hover;
       }
