--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -43,9 +43,12 @@ body {
     overflow-x: auto;
     overflow-y: visible;
     white-space: nowrap;
-  }
-  ::-webkit-scrollbar {
-    display: none;
+    // -webkit-overflow-scrolling: touch;
+    // -ms-overflow-style: -ms-autohiding-scrollbar;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 
   /* Multi-level navigation links */
@@ -71,11 +74,9 @@ body {
     }
 
     .navlinks-container {
-      // position: relative;
       display: inline-block;
       text-align: left;
       z-index: 90;
-      // overflow: visible;
 
       .navlinks-children {
         position: absolute;
@@ -84,7 +85,6 @@ body {
         word-break: break-word;
         background: $header-bg;
 
-        /*display: none;*/
         transition: transform 0.3s;
         transform-origin: top;
         &:not(:hover) {
@@ -98,7 +98,6 @@ body {
 
       &:hover {
         .navlinks-children {
-          /*display: block;*/
           transform: scaleY(1);
         }
       }
@@ -192,48 +191,48 @@ $hide-sidebar-screen-width: 1120px;
 	padding-bottom: 20px;
 
 	p {
-	    margin: 0;
+    margin: 0;
 	}
-    ul {
-        padding-left: 20px;
-        margin: 0;
-    }
+  ul {
+    padding-left: 20px;
+    margin: 0;
+  }
 
 	&:not(:first-child) {
-    	border-top: 1px solid #ccc;
-    	padding-top: 20px;
-    }
+  	border-top: 1px solid #ccc;
+  	padding-top: 20px;
+  }
 
-    .col-box-title {
-    	color: #333;
-	    margin-bottom: 10px;
-	    font-size: $small-font-size * 1.1;
-    }
+  .col-box-title {
+  	color: #333;
+    margin-bottom: 10px;
+    font-size: $small-font-size * 1.1;
+  }
 }
 @media (max-width: $hide-sidebar-screen-width) {
 	.page-content .wrapper {
-        overflow: hidden;
-        .col-second, &:before {
-            z-index: 10;
-            transition: transform .4s;
-            transform: translateX( $col-secnod-width );
-    	}
+    overflow: hidden;
+    .col-second, &:before {
+      z-index: 10;
+      transition: transform .4s;
+      transform: translateX( $col-secnod-width );
+  	}
 
-        &.expand-sidebar {
-            &:before {
-                box-shadow: 0 0 4px #999;
-            }
-            .col-second, &:before {
-                transform: translateX( 0 );
-            }
-        }
+    &.expand-sidebar {
+      &:before {
+        box-shadow: 0 0 4px #999;
+      }
+      .col-second, &:before {
+        transform: translateX( 0 );
+      }
     }
+  }
 	.col-main {
 		width: 100%;
 	}
 	.col-second {
-        margin-left: - $col-secnod-width;
-    }
+    margin-left: - $col-secnod-width;
+  }
 }
 .col-box-author {
 	text-align: center;
@@ -250,17 +249,10 @@ $hide-sidebar-screen-width: 1120px;
 	.contact {
 		margin-top: 20px;
 		a {
-			/*background: #999;
-			color: #eee;*/
 			padding: 15px 10px;
 			text-decoration: none;
 			border-radius: 5px;
-    		white-space: nowrap;
-
-			/*&:hover {
-				transition: background 0.3s ease;
-				background: #666;
-			}*/
+  		white-space: nowrap;
 		}
 	}
 }
