--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,6 +5,7 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
+    <p class="post-meta">{% if page.last_updated %}Last updated: {{ page.last_updated | date: "%b %-d, %Y" }}{% endif %}</p>
   </header>
 
   <article class="post-content">
