Allow main content area to scroll horizontally

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,43 +1,43 @@
 body {
-	background-color: #e0e0e3;
+  background-color: #e0e0e3;
 }
 
 .wrapper {
-	margin: 0 auto;
-	max-width: 1100px;
+  margin: 0 auto;
+  max-width: 1100px;
 }
 @media (max-width: 1120px) {
-	.wrapper {
-		max-width: 800px;
-	}
+  .wrapper {
+    max-width: 800px;
+  }
 }
 
 .header {
-	line-height: $base-font-size * 2;
-	background-color: $header-bg;
-	padding: 10px;
-	margin: 0;
+  line-height: $base-font-size * 2;
+  background-color: $header-bg;
+  padding: 10px;
+  margin: 0;
   position: relative;
   z-index: 999;
 
-	&:after {
-		clear: both;
-		content: ' ';
-		display: block;
-	}
+  &:after {
+    clear: both;
+    content: ' ';
+    display: block;
+  }
 
   #sidebar-toggle { display: none; }
 
-	.site-title {
-		float: left;
-		color: $header-fg;
-		text-decoration: none;
-		font-size: $base-font-size;
-		line-height: $base-font-size * 2;
+  .site-title {
+    float: left;
+    color: $header-fg;
+    text-decoration: none;
+    font-size: $base-font-size;
+    line-height: $base-font-size * 2;
     margin: -10px;
     margin-right: 0;
     padding: 10px;
-	}
+  }
 
   .nav-scroll {
     overflow-x: auto;
@@ -52,8 +52,8 @@ body {
   }
 
   /* Multi-level navigation links */
-	nav {
-		text-align: right;
+  nav {
+    text-align: right;
 
     a {
       text-decoration: none;
@@ -98,7 +98,7 @@ body {
         }
       }
     }
-	}
+  }
 }
 
 $col-main-width: 800px;
@@ -121,98 +121,99 @@ $hide-sidebar-screen-width: 1120px;
       background-repeat: no-repeat;
       background-position: center center;
       color: transparent;
-		}
+    }
   }
 }
 
 .page-content {
-	padding: 30px 0;
+  padding: 30px 0;
 
-	.wrapper {
-		position: relative;
-		background: #FAFAFA;
-		box-shadow: 0 1px 4px #999;
-		outline: 1px solid #CCC;
-		&:after {
-			clear:both;
-			content: '';
-			display:block;
-		}
-		&:before {
-			content: '';
-			display:block;
-			position: absolute;
-			width: $col-secnod-width;
-			height: 100%;
-			right: 0;
-			top: 0;
-			background: #EEE;
-		}
-	}
+  .wrapper {
+    position: relative;
+    background: #FAFAFA;
+    box-shadow: 0 1px 4px #999;
+    outline: 1px solid #CCC;
+    &:after {
+      clear:both;
+      content: '';
+      display:block;
+    }
+    &:before {
+      content: '';
+      display:block;
+      position: absolute;
+      width: $col-secnod-width;
+      height: 100%;
+      right: 0;
+      top: 0;
+      background: #EEE;
+    }
+  }
 
-	img {
-		max-width:100%;
-	}
+  img {
+    max-width:100%;
+  }
 }
 
 // Column
 .col-main {
-	position: relative;
-	box-sizing: border-box;
-	padding: 30px;
-	width: $col-main-width;
-	float: left;
-	animation: ebani-descend ease .5s 1;
-	h1, h2, h3, h4, .post-meta, .rss-link {
-		animation: ebani-ascend ease .5s 1;
-	}
-	article, .post-excerpt {
-		table, pre, img {
-			animation: ebani-ascend ease .3s 1;
-		}
-	}
+  position: relative;
+  box-sizing: border-box;
+  padding: 30px;
+  width: $col-main-width;
+  float: left;
+  overflow: auto;
+  animation: ebani-descend ease .5s 1;
+  h1, h2, h3, h4, .post-meta, .rss-link {
+    animation: ebani-ascend ease .5s 1;
+  }
+  article, .post-excerpt {
+    table, pre, img {
+      animation: ebani-ascend ease .3s 1;
+    }
+  }
 }
 .col-second {
-	position: relative;
-	box-sizing: border-box;
-	float: right;
-	width: $col-secnod-width;
-	padding: 20px;
-	background: #EEE;
-	z-index: 10;
+  position: relative;
+  box-sizing: border-box;
+  float: right;
+  width: $col-secnod-width;
+  padding: 20px;
+  background: #EEE;
+  z-index: 10;
 }
 .col-box{
-	color: #666;
-	font-size: $small-font-size;
-	padding-bottom: 20px;
+  color: #666;
+  font-size: $small-font-size;
+  padding-bottom: 20px;
 
-	p {
+  p {
     margin: 0;
-	}
+  }
   ul {
     padding-left: 20px;
     margin: 0;
   }
 
-	&:not(:first-child) {
-  	border-top: 1px solid #ccc;
-  	padding-top: 20px;
+  &:not(:first-child) {
+    border-top: 1px solid #ccc;
+    padding-top: 20px;
   }
 
   .col-box-title {
-  	color: #333;
+    color: #333;
     margin-bottom: 10px;
     font-size: $small-font-size * 1.1;
   }
 }
 @media (max-width: $hide-sidebar-screen-width) {
-	.page-content .wrapper {
+  .page-content .wrapper {
     overflow: hidden;
     .col-second, &:before {
       z-index: 10;
       transition: transform .4s;
       transform: translateX( $col-secnod-width );
-  	}
+    }
 
     &.expand-sidebar {
       &:before {
@@ -223,53 +224,53 @@ $hide-sidebar-screen-width: 1120px;
       }
     }
   }
-	.col-main {
-		width: 100%;
-	}
-	.col-second {
+  .col-main {
+    width: 100%;
+  }
+  .col-second {
     margin-left: - $col-secnod-width;
   }
 }
 .col-box-author {
-	text-align: center;
-	.avatar {
-		width: 135px;
-		height: 135px;
-		border-radius: 100%;
-		margin: 20px auto;
-		display: block;
-	}
-	.name {
-		font-size: $base-font-size;
-	}
-	.contact {
-		margin-top: 20px;
-		a {
-			padding: 15px 10px;
-			text-decoration: none;
-			border-radius: 5px;
-  		white-space: nowrap;
-		}
-	}
+  text-align: center;
+  .avatar {
+    width: 135px;
+    height: 135px;
+    border-radius: 100%;
+    margin: 20px auto;
+    display: block;
+  }
+  .name {
+    font-size: $base-font-size;
+  }
+  .contact {
+    margin-top: 20px;
+    a {
+      padding: 15px 10px;
+      text-decoration: none;
+      border-radius: 5px;
+      white-space: nowrap;
+    }
+  }
 }
 
 // footer
 .footer {
-	padding: 60px 0;
-	text-align:center;
-	color:#666;
-	font-size:$small-font-size;
+  padding: 60px 0;
+  text-align:center;
+  color:#666;
+  font-size:$small-font-size;
 }
 
 @import "post", "home";
 
 @include media-query($on-laptop) {
-	.page-content {
-		padding: 0;
-	}
-	.footer {
-		padding: 15px 0 ;
-	}
+  .page-content {
+    padding: 0;
+  }
+  .footer {
+    padding: 15px 0 ;
+  }
 }
 
 @include media-query($on-palm) {
@@ -278,15 +279,15 @@ $hide-sidebar-screen-width: 1120px;
       text-align: center;
     }
   }
-	.col-main {
-		padding: 10px;
-	}
-	.col-box {
-		width: 100%;
-		float: none;
-		margin-bottom: 20px;
-	}
-	pre {
-		padding: 10px;
-	}
+  .col-main {
+    padding: 10px;
+  }
+  .col-box {
+    width: 100%;
+    float: none;
+    margin-bottom: 20px;
+  }
+  pre {
+    padding: 10px;
+  }
 }
