--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -25,8 +25,13 @@
     .post-content {
         color: #333;
 
-        h1,h2,h3,h4,h5,h6 {
+        h1, h2, h3, h4, h5, h6 {
             color: #000;
+            font-variant: small-caps;
+        }
+
+        h1 {
+            text-transform: uppercase;
         }
 
         h1, h2 {
@@ -34,8 +39,12 @@
             margin-top: 30px;
         }
 
-        h1, h2, h3 {
+        h1, h2 {
             border-bottom: 1px solid #CCC;
+        }
+
+        h3 {
+            text-decoration: underline;
         }
 
         pre {
