--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -159,7 +159,7 @@ $hide-sidebar-screen-width: 1120px;
 .col-main {
   position: relative;
   box-sizing: border-box;
-  padding: 30px;
+  padding: 30px 40px;
   width: $col-main-width;
   float: left;
   overflow: auto;
