--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -5,7 +5,7 @@ body {
 	line-height: $base-line-height;
 }
 a {
-	text-decoration: none;
+	text-decoration: underline;
 	color: #036;
 }
 a:hover, a:focus {
