Update to Font Awesome 5.11.2

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,9 +21,7 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
   <!-- Font Awesome -->
-  <script defer src="https://pro.fontawesome.com/releases/v5.5.0/js/solid.js" integrity="sha384-VxezC2Q+YoC+yUILib+HlmOsFiqNzYtQIXsHYY6ST7QZVfgBNs2giKE97ijGMgUH" crossorigin="anonymous"></script>
-  <script defer src="https://pro.fontawesome.com/releases/v5.5.0/js/brands.js" integrity="sha384-oMyy7aPCmlH4ZGEaKHW+zAoaKDWIFh6iqJ53lusMpn+Kp8SN5nJ2kzkP1qd0+icb" crossorigin="anonymous"></script>
-  <script defer src="https://pro.fontawesome.com/releases/v5.5.0/js/fontawesome.js" integrity="sha384-oPma1F1txBbqTG+1O7BEx0A/qFtD+R661ULJLmI9RDQ0PfbRP1tQU3vBIBbJIAxL" crossorigin="anonymous"></script>
+  <script defer src="https://pro.fontawesome.com/releases/v5.11.2/js/all.js" integrity="sha384-S++1cFhwpxbtRScUliTyprAMK33gMHbukurY4rNyt9CxIniGm6PfioUsQPoAITQJ" crossorigin="anonymous"></script>
 
   <!-- jquery -->
   <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" crossorigin="anonymous"></script>
