Update table style

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -52,14 +52,14 @@ table {
 	background: #FFF;
 
 	td, th {
-		border: 1px solid #CCC;
+		border: 1px solid #ddd;
 		padding: 5px 15px;
 		margin: 0;
 	}
 
 	th {
-		border-color: #555;
-		background: #555;
+		#border-color: #555;
+		background: #036;
 		color: #eee;
 		font-weight:normal;
 	}
