Fix inline code styling

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -24,8 +24,8 @@ code,pre {
 }
 code {
 	color: #900;
-	background-color: #fff;
-	padding: 2px 0;
+	background-color: #eee;
+	padding: 2px 4px;
 	border-radius: 5px;
 }
 pre {
