Change header background colour

--- a/css/main.scss
+++ b/css/main.scss
@@ -25,7 +25,7 @@ $on-laptop:        800px;
 $color-link: #036;
 $color-link-hover: #069;
 
-$header-bg: #607D8B;
+$header-bg: #036;
 $header-bg-hover: #78909C;
 $header-link: #CFD8DC;
 $header-link-hover: #FFFFFF;
