Add a bit of vertical spacing in sidebar content

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -188,7 +188,7 @@ $hide-sidebar-screen-width: 1120px;
   padding-bottom: 20px;
 
   p {
-    margin: 0;
+    margin: .5em 0;
   }
   ul {
     padding-left: 20px;
