--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -33,7 +33,7 @@
   <div class="col-box-title">Newest Posts</div>
   <ul class="post-list">
     {% for post in site.posts limit:5 %}
-      <li><a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></li>
+      <li><p><a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></p></li>
     {% endfor %}
   </ul>
 </div>
