--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -57,7 +57,8 @@
         .middle-image {
             display: block;
             margin-left: auto;
-            margin-right: auto
+            margin-right: auto;
+            border: 1px solid #ddd;
         }
     }
     .post-comments {
