--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -151,7 +151,7 @@ $hide-sidebar-screen-width: 1120px;
   }
 
   img {
-    max-width:100%;
+    max-width: 100%;
   }
 }
 
@@ -170,6 +170,20 @@ $hide-sidebar-screen-width: 1120px;
   article, .post-excerpt {
     table, pre, img {
       animation: ebani-ascend ease .3s 1;
+    }
+  }
+  .page-main-image {
+    margin: -30px -40px 20px -40px;
+    max-width: $col-main-width;
+    img {
+      margin-bottom: 0;
+    }
+    p {
+      padding: 0 10px;
+      margin: 0;
+      font-style: italic;
+      font-size: 0.8em;
+      text-align: right;
     }
   }
 }
@@ -280,7 +294,10 @@ $hide-sidebar-screen-width: 1120px;
     }
   }
   .col-main {
-    padding: 10px;
+    padding: 20px;
+    .page-main-image {
+      display: none;
+    }
   }
   .col-box {
     width: 100%;
