--- a/_includes/twitter_card.html
+++ b/_includes/twitter_card.html
@@ -1,8 +1,8 @@
-<!-- Twitter cards -->
+<!-- Twitter card -->
 <meta name="twitter:site"    content="@{{ site.twitter_username }}">
 
 {% if page.twitter_creator %}
-<meta name="twitter:creator" content="@{{ page.twitter_creator }}">
+<meta name="twitter:creator" content="{{ page.twitter_creator }}">
 {% endif %}
 
 <meta name="twitter:title"   content="{{ page.title }}">
@@ -13,11 +13,14 @@
 <meta name="twitter:description" content="{{ site.description }}">
 {% endif %}
 
-{% if page.image %}
+{% if page.main_image.url %}
+<meta name="twitter:card"  content="summary_large_image">
+<meta name="twitter:image" content="{{ page.main_image.url | absolute_url }}">
+{% elsif page.image %}
 <meta name="twitter:card"  content="summary">
 <meta name="twitter:image" content="{{ site.url }}{{ page.image }}">
 {% else %}
 <meta name="twitter:card"  content="summary">
-<meta name="twitter:image" content="{{ site.title_image }}">
+<meta name="twitter:image" content="{{ site.twitter_default_card_image }}">
 {% endif %}
-<!-- end of Twitter cards -->
+<!-- End Twitter card -->
