--- a/css/main.scss
+++ b/css/main.scss
@@ -3,17 +3,12 @@
 ---
 @charset "utf-8";
 
-@font-face {
-    font-family: "hygl";
-    src: url("../fonts/Xingkai_hygl.ttf") format("truetype");
-}
-
-$base-font-family: hygl, "-apple-system", "BlinkMacSystemFont", "Open Sans", "Helvetica Neue", "DejaVu Sans", Arial, Helvetica, sans-serif;
+$base-font-family: "-apple-system", "BlinkMacSystemFont", "Open Sans", "Helvetica Neue", "DejaVu Sans", Arial, Helvetica, sans-serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
-$code-font-family:   Menlo, Monaco, Consolas, "DejaVu Sans Mono", "Liberation Mono", "文泉驿等宽微米黑", "Courier New", Courier, SimSun, monospace;
+$code-font-family:   Menlo, Monaco, Consolas, "DejaVu Sans Mono", "Liberation Mono", "Courier New", Courier, monospace;
 $code-font-size:     15px;
 
 // Width of the content area
