Stop using FA pro CDN

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,7 +27,9 @@
   {% endif %}
 
   <!-- Font Awesome -->
-  <script defer src="https://pro.fontawesome.com/releases/v5.11.2/js/all.js" integrity="sha384-S++1cFhwpxbtRScUliTyprAMK33gMHbukurY4rNyt9CxIniGm6PfioUsQPoAITQJ" crossorigin="anonymous"></script>
+  <script defer src="/js/fa-brands.min.js"></script>
+  <script defer src="/js/fa-solid.min.js"></script>
+  <script defer src="/js/fontawesome.min.js"></script>
 
   <!-- jquery -->
   <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" crossorigin="anonymous"></script>
