Update About section, h3 formatting, footer copyright year

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
 <div class="wrapper">
-&copy; 2018 {{ site.author }}. Original Theme: <a href="https://github.com/laobubu/jekyll-theme-EasyBook">Easy Book</a>
+&copy; 2018-{{ site.time | date: '%Y' }} {{ site.author }}. Original Theme: <a href="https://github.com/laobubu/jekyll-theme-EasyBook">Easy Book</a>
 </div>
 </footer>
 
