--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -45,6 +45,11 @@
 
         h3 {
             text-decoration: underline;
+            margin-block-end: 0;
+        }
+
+        h3 ~ p {
+            margin-block-start: 0.2em;
         }
 
         pre {
