--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -14,7 +14,7 @@ a:hover, a:focus {
 }
 blockquote {
 	background: #FFF;
-	margin:0;
+	margin: 10px 0 20px;
 	padding: 5px 20px;
 	border-left: 10px solid #CCC;
 }
