--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -46,10 +46,10 @@
         h3 {
             text-decoration: underline;
             margin-block-end: 0;
-        }
 
-        h3 ~ p {
-            margin-block-start: 0.2em;
+            + p {
+                margin-block-start: 0.2em;
+            }
         }
 
         pre {
@@ -64,6 +64,19 @@
             margin-left: auto;
             margin-right: auto;
             border: 1px solid #ddd;
+        }
+
+        blockquote {
+            p:first-of-type {
+                margin-block-start: 0em;
+            }
+            p:last-of-type {
+                margin-block-end: 0em;
+            }
+        }
+
+        .katex-display {
+            margin: 2em 0;
         }
     }
     .post-comments {
